--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">郊外にある、歴史も古い小学校・・・<br>
-            いつの間にか、放課後に家庭科室から奇妙な叫び声が聞こえてくるという噂が流れ始めた。<br>
-            調査したが、噂の出どころはわからない。<br>
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと家庭科室が原因で、学校が滅びるだろう」と予言。<br>
-            生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの<br>
-            ２名を連れて家庭科室の前に来たが、ドアが開かない。<br>
-            さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
+          <p class="text-center">●月■日、今日は田舎暮らしの友人とオンライン飲み会をする予定だ<br>
+            時刻は23:48、夜も更け話が弾み、話題はホラーへと変わっていった。<br>
+            「ねえ、知ってる？うちの地元、結構ホラーで有名でさ。町外れにある廃校で行方不明者が多発してるんだって」<br>
+            そう楽しそうに語る友人は、酔った勢いで「行ってみないか？」と言い出した。<br>
+            止めることもできず、友人は一人廃校へと向かっていった<br>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
