--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
             止めることもできず、友人は一人廃校へと向かっていった<br>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
+              <li>助けを求めるには時間がない</li>
+              <li>1時間後に■■■■が来て、友人は助からない</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">薄気味悪い廃坑に閉じ込められた友人がパニックを起こしている！まずは、校舎の全体地図を探そう！</p>
         </div>
       </div>
     </section>
