--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </section>
     <section class="section">
       <div class="container">
-        <a class="btn" href="main.html">準備OK？では、ゲームスタート！！！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
+        <a class="btn" href="main.html">用意はいい？ではゲームスタート<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
       </div>
     </section>
   </main>
